--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,14 +4,11 @@
     "description": "Acess your accents easily!",
     "manifest_version": 2,
     "browser_action": {
-        "default_icon": "assets/keyboard.png",
+        "default_icon": "assets/Accent.png",
         "default_title": "Q&A",
         "default_popup": "src/html/popup.html"
     },
     "permissions": ["storage", "unlimitedStorage", "tabs", "<all_urls>"],
-    "background": {
-        "persistent": false
-    },
     "content_scripts": [{
         "matches": ["<all_urls>"],
         "css": ["src/css/styles.css"],
