--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,6 @@
     "permissions": ["storage", "unlimitedStorage", "tabs", "<all_urls>"],
     "content_scripts": [{
         "matches": ["<all_urls>"],
-        "css": ["src/css/styles.css"],
+        "css": ["src/css/styles.css"]
     }]
 }
