--- a/manifest.json
+++ b/manifest.json
@@ -8,10 +8,13 @@
         "default_title": "Q&A",
         "default_popup": "src/html/popup.html"
     },
+    "background": {
+      "scripts": ["src/js/popup.js"],
+      "persistent": false
+    },
     "permissions": ["storage", "unlimitedStorage", "tabs", "<all_urls>"],
     "content_scripts": [{
         "matches": ["<all_urls>"],
-        "css": ["src/css/styles.css"],
-        "js": ["src/js/popup.js"]
+        "css": ["src/css/styles.css"]
     }]
 }
