Fixed Bug for Text Input
 - Removed background and content_scripts in manifest.json
 - Added standrad script tag in popup.html
 - Extension now fully functional!

--- a/manifest.json
+++ b/manifest.json
@@ -8,13 +8,5 @@
         "default_title": "Q&A",
         "default_popup": "src/html/popup.html"
     },
-    "background": {
-      "scripts": ["src/js/popup.js"],
-      "persistent": false
-    },
-    "permissions": ["storage", "unlimitedStorage", "tabs", "<all_urls>"],
-    "content_scripts": [{
-        "matches": ["<all_urls>"],
-        "css": ["src/css/styles.css"]
-    }]
+    "permissions": ["storage", "unlimitedStorage", "tabs", "<all_urls>"]
 }
